# swagger.json
@@ -1,89 +1,26 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/v1/users": {
+    "/v1/news": {
       "get": {
-        "operationId": "UsersController_findAll_v1",
-        "parameters": [],
+        "operationId": "NewsArticleController_getNews_v1",
+        "parameters": [
+          {
+            "name": "category",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
           }
         },
         "tags": [
-          "users"
-        ]
-      }
-    },
-    "/v1/auth/signUp": {
-      "post": {
-        "operationId": "AuthController_signUp_v1",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateUserDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "auth"
-        ]
-      }
-    },
-    "/v1/auth/signIn": {
-      "post": {
-        "operationId": "AuthController_signIn_v1",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/SignInDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "auth"
-        ]
-      }
-    },
-    "/v1/auth/change-password": {
-      "patch": {
-        "operationId": "AuthController_changePassword_v1",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ChangePasswordDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "auth"
+          "news"
         ]
       }
     }
@@ -104,64 +41,6 @@
         "type": "http"
       }
     },
-    "schemas": {
-      "CreateUserDto": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "fullName": {
-            "type": "string"
-          },
-          "phoneNumber": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "email",
-          "password",
-          "fullName",
-          "phoneNumber"
-        ]
-      },
-      "SignInDto": {
-        "type": "object",
-        "properties": {
-          "phoneNumber": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "phoneNumber",
-          "password"
-        ]
-      },
-      "ChangePasswordDto": {
-        "type": "object",
-        "properties": {
-          "phoneNumber": {
-            "type": "string"
-          },
-          "oldPassword": {
-            "type": "string"
-          },
-          "newPassword": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "phoneNumber",
-          "oldPassword",
-          "newPassword"
-        ]
-      }
-    }
+    "schemas": {}
   }
 }
